<resources>
    <string name="app_name">YourShop</string>
    <string name="producto">Producto</string>
    <string name="contraseña">Contraseña</string>
    <string name="listarProductos">Listar productos</string>
    <string name="listaP">Lista de productos</string>
    <string name="crearProducto">Crear producto</string>
    <string name="nombreP">Nombre del producto</string>
    <string name="descripcionP">Descripción del producto</string>
    <string name="cantidadP">Cantidad</string>
    <string name="precioP">Precio</string>
    <string name="activoP">Activo</string>
    <string name="verProducto">Ver producto</string>
    <string name="usuario">Usuario</string>
    <string name="crearUsuario">Crear usuario</string>
    <string name="nombreU">Nombre de usuario</string>
    <string name="passwordU">Contraseña</string>
    <string name="rolU">Rol</string>
    <string name="lastLogin">Última conexión</string>
    <string name="nuevaContraseña">Nueva contraseña</string>
    <string name="repetirContraseña">Repetir contraseña</string>
    <string name="listarUsuarios">Listar usuarios</string>
    <string name="listarU">Lista de usuarios</string>
    <string name="modificarUsuario">Modificar usuario</string>
    <string name="modificarPerfil">Modificar perfil</string>
    <string name="modificarProducto">Modificar producto</string>
    <string name="tienda">Tienda</string>
    <string name="nombreTienda">Nombre de Tienda</string>
    <string name="cifTienda">CIF</string>
    <string name="correoTienda">Correo de contacto</string>
    <string name="modificarTienda">Modificar tienda</string>
    <string name="iniciarSesión">Iniciar Sesión</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="registrar"><u>Registrarse</u></string>
    <string name="registro">Registrarse</string>
    <string name="ayuda">Ayuda</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="errorIniciarSesion">Inicia sesión o regístrate</string>
    <string name="errorLogin">Usuario o contraseña incorrectos</string>
    <string name="errorListado">No se ha podido mostrar el listado</string>
    <string name="errorLoginServidor">Error al conectar con el servidor</string>
    <string name="errorCampoVacio">Hay algún campo vacío</string>
    <string name="errorCrear">Error al crear</string>
    <string name="errorModificar">Error al modificar</string>
    <string name="errorEliminar">Error al eliminar</string>
    <string name="errorRegistro">Error al registrarse</string>
    <string name="errorLogout">Error al cerrar sesión</string>
    <string name="errorContraseña">Las contraseñas no coinciden</string>
    <string name="crearProductoOK">Producto creado correctamente</string>
    <string name="crearUsuarioOK">Usuario creado correctamente</string>
    <string name="registroOK">Registro realizado correctamente</string>
    <string name="modificarUsuarioOK">Usuario modificado correctamente</string>
    <string name="modificarProductoOK">Producto modificado correctamente</string>
    <string name="modificarTiendaOK">Tienda modificada correctamente</string>
    <string name="eliminarUsuarioOK">Usuario eliminado correctamente</string>
    <string name="eliminarProductoOk">Producto eliminado correctamente</string>
    <string name="pregunta1">¿Cómo puedo crear un producto?</string>
    <string name="respuesta1">Pincha en el menú, Producto > Crear producto</string>
    <string name="pregunta2">¿Cómo puedo crear un usuario?</string>
    <string name="respuesta2">Pincha en el menú, Usuario > Crear usuario</string>
    <string name="pregunta3">¿Cómo puedo modificar un producto?</string>
    <string name="respuesta3">Pincha en el menú, Producto > Listar productos, pincha en un producto y se abrirá un formulario para modificar sus campos</string>
    <string name="pregunta4">¿Cómo puedo modificar un usuario?</string>
    <string name="respuesta4">Pincha en el menú, Usuario > Listar usuarios, pincha en un usuario y se abrirá un formulario para modificar sus campos</string>
    <string name="pregunta5">¿Cómo puedo modificar mi contraseña?</string>
    <string name="respuesta5">Pincha en el menú, Modificar perfil y se abrirá un formulario para cambiar tu contraseña</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="dialogUsuario">¿Seguro que quieres borrar este usuario?</string>
    <string name="dialogProducto">¿Seguro que quieres borrar este producto?</string>
    <string name="dialogCerrarSesion">¿Seguro que quieres cerrar sesión?</string>
    <string-array name="spinnerUsuario">
        <item>Empleado</item>
        <item>Administrador</item>
    </string-array>
</resources>
