<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearAyuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAyuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ayuda"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/helpPregunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/pregunta1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helpRespuesta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/respuesta1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/helpPregunta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/pregunta2"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helpRespuesta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/respuesta2"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/helpPregunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pregunta3"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helpRespuesta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/respuesta3"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/helpPregunta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pregunta4"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helpRespuesta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/respuesta4"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/helpPregunta5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pregunta5"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/helpRespuesta5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta5"
        android:textSize="15sp" />
</LinearLayout>

