<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombreUsuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreU" />

    <EditText
        android:id="@+id/etNombreUsuarioRegistro"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPasswordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordU" />

    <EditText
        android:id="@+id/etPasswordRegistro"
        android:layout_width="250dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvNombreTiendaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreTienda" />

    <EditText
        android:id="@+id/etNombreTiendaRegistro"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCIFRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cifTienda" />

    <EditText
        android:id="@+id/etCIFRegistro"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCorreoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correoTienda" />

    <EditText
        android:id="@+id/etCorreoRegistro"
        android:layout_width="250dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registrar"
        android:text="@string/registro" />
</LinearLayout>