<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutCrearProducto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreP"/>
        <EditText
            android:id="@+id/etNombreProducto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvDescripcionProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionP"/>
        <EditText
            android:id="@+id/etDescripcionProducto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidadP"/>
        <EditText
            android:id="@+id/etCantidad"
            android:inputType="number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precioP"/>
        <EditText
            android:id="@+id/etPrecio"
            android:inputType="numberDecimal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activoP"/>

        <Switch
            android:id="@+id/swActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bCrearProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="crearProducto"
            android:text="@string/crearProducto"/>


</LinearLayout>