<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutModificarTienda"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvNombreTiendaM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreTienda"/>
    <EditText
        android:id="@+id/etNombreTiendaM"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvCIFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cifTienda"/>
    <EditText
        android:id="@+id/etCIFM"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvCorreoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correoTienda"/>
    <EditText
        android:id="@+id/etCorreoM"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bModificarTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="modificarTienda"
        android:text="@string/modificarTienda"/>
</LinearLayout>