<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutIniciarSesion"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:gravity="center"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:paddingBottom="10dp"
            android:text="@string/iniciarSesión"/>
        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/usuario"/>
        <EditText
            android:id="@+id/etUsuario"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPasswordLogin"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"/>
        <EditText
            android:id="@+id/etPasswordLogin"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/bIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="iniciarSesion"
            android:text="@string/iniciarSesión"/>
        <Button
            android:id="@+id/bRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="abrirRegistroForm"
            android:text="@string/registrar"/>
</LinearLayout>